Prevent code blocks from lumping on mobile. Fix #5

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,6 +13,6 @@ body {
 }
 
 pre {
-    padding: 0  0.5em;
-    margin:  0 -0.5em;
+    padding-left: 0.5em;
+    margin-left: -0.5em;
 }
